--- a/project-manager.html
+++ b/project-manager.html
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/arc/job/oGuBafwF'>ARC Document Solutions Careers - Print Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/arc/job/oGuBafwF'>ARC Document Solutions Careers - Print Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -80,7 +80,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Dcode1/743999692302585-accelerator-program-manager'>Dcode Accelerator Program Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Dcode1/743999692302585-accelerator-program-manager'>Dcode Accelerator Program Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -134,11 +134,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/logitech/job/oGKCafwW'>Logitech Careers - Privacy Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/logitech/job/oGKCafwW'>Logitech Careers - Privacy Program Manager</a></h5> 
 <p><span class="badge badge-light">Cork, Ireland California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBd9VfwC&k=Job&j=ofGDafws&__jvst=Employee&__jvsd=sTVFrgwF&__jvsc=Twitter&bid=nMnPUKw7'>DDB Careers - Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBd9VfwC&k=Job&j=ofGDafws&__jvst=Employee&__jvsd=sTVFrgwF&__jvsc=Twitter&bid=nMnPUKw7'>DDB Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -154,7 +154,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-project-manager-ophthalmology-us-or-canada-30218'>Sr Project Manager (Ophthalmology- US or Canada) - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-project-manager-ophthalmology-us-or-canada-30218'>Sr Project Manager (Ophthalmology- US or Canada) - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -192,7 +192,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kimmel-associates.breezy.hr/p/20cf93e51b91-assistant-project-manager'>Assistant Project Manager</a></h5> 
+<h5><a href='https://kimmel-associates.breezy.hr/p/20cf93e51b91-assistant-project-manager'>Assistant Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -236,7 +236,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adept-packaging.workable.com/j/C1D116D030'>Adept Packaging - Jobs: Automation Controls Project Manager - Apply online</a></h5> 
+<h5><a href='https://adept-packaging.workable.com/j/C1D116D030'>Adept Packaging - Jobs: Automation Controls Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Atlanta, Georgia</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -260,11 +260,11 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692290599-project-manager'>Octopus Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692290599-project-manager'>Octopus Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692108021-it-operations-project-manager'>Octopus IT Operations Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Octopus1/743999692108021-it-operations-project-manager'>Octopus IT Operations Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -281,7 +281,7 @@ done differently, better or maybe simpler? Over the years, curiosity builds?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=or509fwp&__jvst=Employee+Referral&__jvsd=spPS2hwU&__jvsc=Twitter&bid=nOrLTKw8'>Curriculum Associates Careers - Senior Program Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qYS9VfwE&k=Job&j=or509fwp&__jvst=Employee+Referral&__jvsd=spPS2hwU&__jvsc=Twitter&bid=nOrLTKw8'>Curriculum Associates Careers - Senior Program Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -343,7 +343,7 @@ Paris (relocation accepted) at Kapten.</p>
 <p>Jul 11, 2019 ... Technical Project Managers are highly regarded members of the Revenue Cycle 
 Project Office for the Physician Group Practices within Emory Healthcare and?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/herjavecgroup/job/oQpAafwJ'>Herjavec Group Careers - Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/herjavecgroup/job/oQpAafwJ'>Herjavec Group Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -391,7 +391,7 @@ Project Office for the Physician Group Practices within Emory Healthcare and?...
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/epizyme/job/oRSBafwe'>Epizyme Careers - Associate Clinical Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/epizyme/job/oRSBafwe'>Epizyme Careers - Associate Clinical Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
